--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All about Functions</title>
-    <script src="./index.js" defer></script>
+    <!-- <script src="./index.js" defer></script> -->
+    <script src="./rough.js" defer></script>
 </head>
 <body style="display: grid; place-items: center; height: 100dvh; background-color: black;">
     <section>
